--- a/my/AdGuardHome/Makefile
+++ b/my/AdGuardHome/Makefile
@@ -7,7 +7,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=AdGuardHome
-PKG_VERSION:=v0.96-hotfix
+PKG_VERSION:=v0.100.8
+PKG_RELEASE=1
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
@@ -52,7 +53,7 @@ define Build/Configure
 endef
 
 define Build/Compile
-	chmod +x $(PKG_BUILD_DIR)/AdGuardHome/AdGuardHome && upx --lzma $(PKG_BUILD_DIR)/AdGuardHome/AdGuardHome
+	chmod +x $(PKG_BUILD_DIR)/AdGuardHome/AdGuardHome && upx --lzma --ultra-brute $(PKG_BUILD_DIR)/AdGuardHome/AdGuardHome
 endef
 
 define Package/$(PKG_NAME)/install
